kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jamming
spec:
  selector:
    app: jamming
  ports:
  - protocol: TCP
    port: 80
